[package]
name = "windowon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "*", features = ["persistence"] }
enigo = "*"
async-std = "*"
atomic_once_cell = "*"
futures = "*"


[profile.release]
lto = "on"
strip = true
debug = false
codegen-units = 1
