[package]
name = "windowon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "*", features = ["persistence"] }
enigo = "*"
tokio = { version = "*", features = ["full"] }
parking_lot = "*"
spin_sleep = "*"
crossbeam-channel = "*"
core_affinity = "*"
mimalloc = { version = "*", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "fat"
strip = true
debug = false
codegen-units = 1
panic = "abort"
opt-level = 3
incremental = false
