[package]
name = "mouse-shaker"
version = "0.1.0"
edition = "2021"
description = "Keeps your system awake by simulating mouse and keyboard activity"

[dependencies]
eframe = "0.29"
enigo = "0.3"
crossbeam-channel = "0.5"
core_affinity = "0.8"
rpmalloc = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }
raw-window-handle = "0.6"
tray-icon = "0.23"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
winresource = "0.1"

[profile.release]
lto = "fat"
strip = true
debug = false
codegen-units = 1
panic = "abort"
opt-level = 3
incremental = false
